Changes by ECHibiki
These were made after I took over the site and ison/tabamin went to join
the real world

--- a/conf/artanis.conf
+++ b/conf/artanis.conf
@@ -62,7 +62,7 @@ db.passwd =
 
 ## The database name.
 ## db.name = <string>
-db.name = db/kotatsu
+db.name = db/shitaba
 
 ## The engine of the database server.
 ## NOTE: for sqlite3, you must leave this field blank, as `db.engine = '
@@ -73,14 +73,14 @@ db.engine =
 ## The size of DB connection pool. If the specified size is less then required,
 ## then the task will be scheduled and sleep till there's available DB connection.
 ## db.poolsize = <integer>
-db.poolsize = 64
+db.poolsize = 16
 
 ## The management mode of DB connection pool:
 ## `increase' for increasing the pool size if any necessary, however it won't reduce back.
 ## `fixed' will not increase the pool size, if it lacks of DB connections, then it will
 ## be scheduled.
 ## db.pool = increase | fixed
-db.pool = increase
+db.pool = fixed
 
 ## Whether to encode params automatically.
 ## NOTE: If you enable db.encodeparams then it's better to decode the related value
@@ -96,11 +96,11 @@ db.lpc = false
 ## Specify your own server info. It'll be Artanis-x.x.x by default, adding
 ## the artanis version number.
 ## server.info = <string>
-server.info = GNU Artanis-0.3.1
+server.info = Artanis-0.4.1
 
 ## If you want to use Nginx for reversed-proxy, please enable it.
 ## server.nginx = enable | disable
-server.nginx = false
+server.nginx = enable
 
 ## Charset in server side. utf-8 in default.
 ## NOTE: Don't change it unless you know what you're doing!
@@ -212,14 +212,16 @@ websocket.timeout = 64
 ## If disabled, you will have to use the IP address to connect instead of the
 ## hostname. e.g. `host.addr = 127.0.0.1'.
 ## host.name = enable | disable | <boolean>
-host.name = example.com
+host.name = 4taba.net
 
 ## The URL/IP of your hosting site.
 ## host.addr = <URL> | <IP>
+#host.addr = 127.0.0.1
 host.addr = 127.0.0.1
 
 ## The listening port of your hosting site.
 ## host.port = <integer>
+#host.port = 3000
 host.port = 3000
 
 ## Specify the protocol family.
@@ -254,7 +256,7 @@ upload.size = 12582912
 ## This is the global maxage of any cache.
 ## If you want to specify maxage for certain page, please read the manual about the Cache.
 ## cache.maxage = <integer>
-cache.maxage = 3600
+cache.maxage = 36000
 
 ## Wheather to enable debug mode.
 ## If you enable debug mode, Artanis will print debug information verbosely.
